--- a/survey/survey.css
+++ b/survey/survey.css
@@ -4,16 +4,19 @@ html,body {
 	display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
+  justify-content:center;
+
+  height: 100%;
   width: 100%;
   font-size: 62.5%;
   background: #F5F5F7;
 }
 
 header {
-	width: 100%;
+  width: 100%;
 	height: 30px;
-	background-color: #00afb1;
+  background-color: #00afb1;
+  flex-shrink: 0;
 }
 
 .status-bar {
@@ -39,17 +42,19 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5% 0%;
+  margin-top: 5%;
   width: 100%;
+  height: 100%;
   color:rgb(32, 32, 32);
   max-width: 800px;
-  height: auto;
 }
 
+
 .question {
-  width: 80%;
+  width: 90%;
+  /*background-color: brown;*/
   height: auto;
-  font-size: 4.7vh ;
+  font-size: 28px ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,12 +64,18 @@ header {
   text-align: center;
 }
 
+
 .responses {
-  width: 75%;
-  height: 40%;
+  /*background-color: blue;*/
+
+  width: 90%;
+  max-width: 500px;
+  height: 85%;
   min-height: 300px;
   line-height: 1.3;
   display: flex;
+  padding-bottom: 20px;
+  justify-content: flex-end;
   flex-direction: column;
   word-break: keep-all;
   cursor: pointer;
@@ -75,16 +86,27 @@ header {
 .choose {
   -webkit-tap-highlight-color: transparent; 
   background: rgb(235, 140, 140);
-  display: inline-block;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height:60px;
+
   min-width: 28px;
   border: 0;
   outline: 0;
   border-radius: 28px;
+
   margin-top: 25px;
-  padding: 18px 23px;
-  font-size: 17px;
+  /*padding: 185px 23px;*/
+  padding: 0px 10px;
+  font-size: 15px;
   letter-spacing: 1px;
+
+
   text-align: center;
+  
   font-family: 'Nanum Gothic', sans-serif;
   color: #fff;
   cursor: pointer;
