--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ input::placeholder {
 }
 
 button {
-  background: #00afb1;
+  background:#1B65F1;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -87,6 +87,7 @@ button {
   padding: 13px 23px;
   /*padding: 18px 23px;*/
   border-radius: 28px;
+  border-radius: 8px;
   margin-top: 20px;
   font-size : 18px;
 
@@ -111,5 +112,5 @@ button {
 }
 
 button:active{
-  background-color: hsl(177, 52%, 42%);
+  background-color: #164eb5;
 }
