--- a/survey/survey.css
+++ b/survey/survey.css
@@ -15,7 +15,8 @@ html,body {
 header {
   width: 100%;
 	height: 30px;
-  background-color: #00afb1;
+  background-color:#1B65F1;
+  
   flex-shrink: 0;
 }
 
@@ -30,17 +31,21 @@ header {
 }
 
 .status-bar[value]::-webkit-progress-bar {
-	background-color:rgb(255, 245, 247);
+	background-color:#f5f5f7;
+	/* background-color:rgb(255, 245, 247); */
 }
 
 .status-bar[value]::-webkit-progress-value {
-	background-color: #8396e9;
+	background-color: #3a73d5;
 }
 
 .result {
+  /*background-color: green;*/
+  
   -webkit-tap-highlight-color: transparent; 
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
   margin-top: 5%;
   width: 100%;
@@ -51,16 +56,19 @@ header {
 
 
 .question {
-  width: 90%;
-  /*background-color: brown;*/
-  height: auto;
-  font-size: 28px ;
+  width: 95%;
+  min-height: 100px;
+
+  
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+
+  /*background-color: brown;*/
+  font-size: 28px ;
   word-break:keep-all;
   font-family: 'Black Han Sans', sans-serif;
-  line-height: 40px;
+  line-height: 33px;
   text-align: center;
 }
 
@@ -70,11 +78,11 @@ header {
 
   width: 90%;
   max-width: 500px;
-  height: 85%;
+  height: 70%;
   min-height: 300px;
   line-height: 1.3;
-  display: flex;
   padding-bottom: 20px;
+  display: flex;
   justify-content: flex-end;
   flex-direction: column;
   word-break: keep-all;
@@ -85,8 +93,8 @@ header {
 
 .choose {
   -webkit-tap-highlight-color: transparent; 
-  background: rgb(235, 140, 140);
-  
+  background: #cedcf4;
+  /* border:3px solid #769be6; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,26 +102,27 @@ header {
   min-height:60px;
 
   min-width: 28px;
-  border: 0;
+  /* border: 0; */
   outline: 0;
-  border-radius: 28px;
+  border-radius: 8px;
+
+  /* border-radius: 28px; */
 
   margin-top: 25px;
   /*padding: 185px 23px;*/
   padding: 0px 10px;
-  font-size: 15px;
+  font-size: 14px;
   letter-spacing: 1px;
 
 
   text-align: center;
-  
   font-family: 'Nanum Gothic', sans-serif;
-  color: #fff;
+  /* color: #fff; */
   cursor: pointer;
 }
 
 .clicked {
-  background-color: #bcafff;
+  background-color: #89b5f0;
 }
 
 .nav {
@@ -128,13 +137,15 @@ header {
   width: 30vh;
   display: inline-block;
   color: #fff;
-  background: #00afb1;
+  background:#1B65F1;
+
   border: 0;
   outline: 0;
   min-width: 28px;
   padding: 18px 23px;
   border-radius: 28px;
-  font-size: 17px;
+  border-radius: 8px;
+  font-size: 16px;
   text-align: center;
   font-family: 'Nanum Gothic', sans-serif;
   letter-spacing: 1px;
@@ -142,5 +153,5 @@ header {
 }
 
 .nextBtn:active {
-  background-color: hsl(177, 52%, 42%);
+  background-color: #164eb5;
 }
