--- a/survey/survey.css
+++ b/survey/survey.css
@@ -13,8 +13,8 @@ html,body {
 }
 
 header {
-  width: 100%;
-	height: 30px;
+  width: 80%;
+	height: 20px;
   background-color:#1B65F1;
   
   flex-shrink: 0;
@@ -40,7 +40,7 @@ header {
 }
 
 .result {
-  /*background-color: green;*/
+  /* background-color: green; */
   
   -webkit-tap-highlight-color: transparent; 
   display: flex;
@@ -50,6 +50,7 @@ header {
   margin-top: 5%;
   width: 100%;
   height: 100%;
+  max-height: 500px;
   color:rgb(32, 32, 32);
   max-width: 800px;
 }
@@ -65,7 +66,7 @@ header {
   align-items: flex-end;
 
   /*background-color: brown;*/
-  font-size: 28px ;
+  font-size: 30px ;
   word-break:keep-all;
   font-family: 'Black Han Sans', sans-serif;
   line-height: 33px;
@@ -93,7 +94,7 @@ header {
 
 .choose {
   -webkit-tap-highlight-color: transparent; 
-  background: #cedcf4;
+  background: #d6e2f7;
   /* border:3px solid #769be6; */
   display: flex;
   justify-content: center;
@@ -111,7 +112,7 @@ header {
   margin-top: 25px;
   /*padding: 185px 23px;*/
   padding: 0px 10px;
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: 1px;
 
 
