--- a/index.css
+++ b/index.css
@@ -55,9 +55,9 @@ body {
   background-color: transparent;
   border: 1px solid rgb(211, 211, 211);
   color: rgb(73, 73, 73);
-  min-width: 28px;
+  min-width: 100px;
   height: 30px;
-  /*background-color: rgb(219, 219, 219);*/
+  background-color: rgb(219, 219, 219);
   text-align: center;
   font-size: 3vmin;
   /*padding-bottom: 5px;*/
