modify submain color

--- a/result/result.css
+++ b/result/result.css
@@ -82,7 +82,7 @@ canvas {
   justify-content: center;
   font-weight: bold;
   color: black;
-  background-color: #1B65F1;
+  background-color: rgb(129, 234, 214);
   font-size: 30px;
   line-height: 70px;
   margin-bottom: 20px;
