--- a/survey/survey.css
+++ b/survey/survey.css
@@ -9,14 +9,14 @@ html,body {
   height: 100%;
   width: 100%;
   font-size: 62.5%;
-  background: #F5F5F7;
+  /* background: #F5F5F7; */
+  background-color: #81ead6;
 }
 
 header {
   width: 80%;
 	height: 20px;
   background-color:#1B65F1;
-  
   flex-shrink: 0;
 }
 
@@ -36,12 +36,13 @@ header {
 }
 
 .status-bar[value]::-webkit-progress-value {
-	background-color: #3a73d5;
+  /* background-color: rgb(129, 234, 214); */
+    background: violet;
 }
 
 .result {
   /* background-color: green; */
-  
+  background-color: rgb(198, 198, 198);
   -webkit-tap-highlight-color: transparent; 
   display: flex;
   flex-direction: column;
@@ -57,15 +58,12 @@ header {
 
 
 .question {
-  width: 95%;
+  width: 90%;
   min-height: 100px;
-
-  
   display: flex;
   justify-content: center;
   align-items: flex-end;
-
-  /*background-color: brown;*/
+  /* background-color: brown; */
   font-size: 30px ;
   word-break:keep-all;
   font-family: 'Black Han Sans', sans-serif;
@@ -76,7 +74,6 @@ header {
 
 .responses {
   /*background-color: blue;*/
-
   width: 90%;
   max-width: 500px;
   height: 70%;
@@ -84,8 +81,8 @@ header {
   line-height: 1.3;
   padding-bottom: 20px;
   display: flex;
-  justify-content: flex-end;
   flex-direction: column;
+  justify-content: flex-end;
   word-break: keep-all;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
@@ -94,23 +91,17 @@ header {
 
 .choose {
   -webkit-tap-highlight-color: transparent; 
-  background: #dfe5f0;
-  /* border:3px solid #769be6; */
+  background:  rgb(255, 219, 118);
+/* background-color: rgb(198, 198, 198); */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height:60px;
-
   min-width: 28px;
-  /* border: 0; */
   outline: 0;
   border-radius: 8px;
-
-  /* border-radius: 28px; */
-
   margin-top: 25px;
-  /*padding: 185px 23px;*/
   padding: 0px 10px;
   font-size: 16px;
   letter-spacing: 1px;
@@ -123,7 +114,7 @@ header {
 }
 
 .clicked {
-  background-color: #a1b5d0;
+  background-color: rgb(252, 186, 6);
 }
 
 .nav {
