edit subtitle margin

--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
   font-family: 'Nanum Gothic', "Russo One";
   font-weight: 800;
-  margin-top: 1%;
+  margin-top: 8px;
   margin-bottom: 15px;
   font-size: 4vmin;
 }
