--- a/result/result.css
+++ b/result/result.css
@@ -245,7 +245,7 @@ i {
 .dev {
   margin: 20px 0px;
   font-family: 'Nanum Gothic', sans-serif;
-  font-size: 20px;
+  font-size: 2.5vmax;
   background-color: rgb(198, 198, 198);
 }
 
