--- a/survey/survey.css
+++ b/survey/survey.css
@@ -9,7 +9,6 @@ html,body {
   height: 100%;
   width: 100%;
   font-size: 62.5%;
-  /* background: #F5F5F7; */
   background-color: #81ead6;
 }
 
@@ -17,6 +16,7 @@ header {
   width: 80%;
 	height: 20px;
   background-color:#1B65F1;
+  
   flex-shrink: 0;
 }
 
@@ -31,18 +31,17 @@ header {
 }
 
 .status-bar[value]::-webkit-progress-bar {
-	background-color:#f5f5f7;
-	/* background-color:rgb(255, 245, 247); */
+  /* background-color: rgb(198, 198, 198); */
+  background-color:rgb(255, 245, 247);
 }
 
 .status-bar[value]::-webkit-progress-value {
-  /* background-color: rgb(129, 234, 214); */
-    background: violet;
+	background-color: #3a73d5;
 }
 
 .result {
   /* background-color: green; */
-  background-color: rgb(198, 198, 198);
+    background-color: rgb(198, 198, 198);
   -webkit-tap-highlight-color: transparent; 
   display: flex;
   flex-direction: column;
@@ -58,12 +57,15 @@ header {
 
 
 .question {
-  width: 90%;
+  width: 95%;
   min-height: 100px;
+
+  
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  /* background-color: brown; */
+
+  /*background-color: brown;*/
   font-size: 30px ;
   word-break:keep-all;
   font-family: 'Black Han Sans', sans-serif;
@@ -74,6 +76,7 @@ header {
 
 .responses {
   /*background-color: blue;*/
+
   width: 90%;
   max-width: 500px;
   height: 70%;
@@ -81,8 +84,8 @@ header {
   line-height: 1.3;
   padding-bottom: 20px;
   display: flex;
-  flex-direction: column;
   justify-content: flex-end;
+  flex-direction: column;
   word-break: keep-all;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
@@ -91,17 +94,24 @@ header {
 
 .choose {
   -webkit-tap-highlight-color: transparent; 
+
   background:  rgb(255, 219, 118);
-/* background-color: rgb(198, 198, 198); */
+  /* border:3px solid #769be6; */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height:60px;
+
   min-width: 28px;
+  /* border: 0; */
   outline: 0;
   border-radius: 8px;
+
+  /* border-radius: 28px; */
+
   margin-top: 25px;
+  /*padding: 185px 23px;*/
   padding: 0px 10px;
   font-size: 16px;
   letter-spacing: 1px;
@@ -114,7 +124,7 @@ header {
 }
 
 .clicked {
-  background-color: rgb(252, 186, 6);
+  background:#1B65F1;
 }
 
 .nav {
@@ -126,17 +136,14 @@ header {
 }
 
 .nextBtn {
+  width: 30vh;
   display: inline-block;
-  width:3vw;
   color: #fff;
   background:#1B65F1;
 
   border: 0;
   outline: 0;
-
-  min-width: 130px;
-  max-width: 400px;
-
+  min-width: 28px;
   padding: 18px 23px;
   border-radius: 28px;
   border-radius: 8px;
@@ -152,8 +159,8 @@ header {
   html,body {
     justify-content:flex-start;
   }
-  .result{
-    height: auto;
+  .responses{
+    min-height: 100px;
   }
   .choose {
     font-size: 13px;
