--- a/result/result.css
+++ b/result/result.css
@@ -77,7 +77,6 @@ canvas {
   overflow: auto;
   display: flex;
   justify-content: center;
-
 }
 
 .submain {  
@@ -91,7 +90,6 @@ canvas {
   line-height: 70px;
   margin-bottom: 20px;
   border-radius: 10px;
-  /* box-shadow: 0 50px 100px -20px rgba(50,50,93,.25), 0 30px 60px -30px rgba(0,0,0,.3), inset 0 -2px 6px 0 rgba(10,37,64,.35); */
 }
 
 .subsub {
@@ -294,7 +292,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px 50px;
+  margin: 30px;
   line-height: 25px;
   font-family: 'Nanum Gothic', sans-serif;
   text-align: center;
