--- a/survey/survey.css
+++ b/survey/survey.css
@@ -6,8 +6,10 @@ html,body {
   align-items: center;
   justify-content:center;
 
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
+  width: auto;
+  min-width: 320px;
   font-size: 62.5%;
   background-color: #81ead6;
 }
@@ -16,7 +18,7 @@ header {
   width: 80%;
 	height: 20px;
   background-color:#1B65F1;
-  
+
   flex-shrink: 0;
 }
 
