--- a/result/result.css
+++ b/result/result.css
@@ -4,7 +4,9 @@ html,
 body {
   width: auto;
   min-width: 320px;
-  background-color: #81ead6;
+  background: #F5F5F7;
+
+  /* background-color: #81ead6; */
 }
 
 section:nth-child(2) {
@@ -83,7 +85,8 @@ canvas {
   justify-content: center;
   font-weight: bold;
   color: black;
-  background:  rgb(255, 219, 118);
+  background: #ffe876;
+  /* background:  rgb(255, 219, 118); */
   font-size: 30px;
   line-height: 70px;
   margin-bottom: 20px;
@@ -240,8 +243,8 @@ i {
 .dev {
   margin: 20px 0px;
   font-family: 'Nanum Gothic', sans-serif;
-  font-size: 2.5vmax;
-  background-color: rgb(198, 198, 198);
+  font-size: 20px;
+  /* background-color: rgb(198, 198, 198); */
 }
 
 .creater {
@@ -283,6 +286,7 @@ img {
 #ifkakao {
   background:#333333;
   color: aliceblue;
+
 }
 
 h2 {
@@ -291,6 +295,7 @@ h2 {
   align-items: center;
   margin: 30px;
   line-height: 25px;
+
   font-family: 'Nanum Gothic', sans-serif;
   text-align: center;
 }
