--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   background: #F5F5F7;
 }
 
-.midBox {
+#midBox {
   width: 70%;
   height: 50%;
   display: flex;
@@ -20,20 +20,23 @@ body {
   align-items: center;
 }
 
-.subtitle {
+span {
   display: flex;
   width:100%;
   justify-content: center;
   align-items: center;
-  font-family: 'Nanum Gothic', "sans serif";
+  font-family: 'Nanum Gothic', sans-serif;
   font-weight: 600;
   margin-top: 13px;
   margin-bottom: 15px;
   font-size: 4vmin;
 }
 
-.alertName{
-  margin-top: 10px;
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .user {
@@ -65,10 +68,6 @@ button {
   font-family:'Nanum Gothic', sans-serif;
   color: #fff;
   display: inline-block;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   min-width: 100px;
   padding: 13px 23px;
   border-radius: 8px;
