--- a/survey/survey.css
+++ b/survey/survey.css
@@ -5,7 +5,8 @@ html,body {
   flex-direction: column;
   align-items: center;
   justify-content:center;
-  width: auto;
+  /* width: auto; */
+  width: 100%;
   min-width: 320px;
   font-size: 62.5%;
   background: #F5F5F7;
@@ -13,16 +14,18 @@ html,body {
 
 header {
   width: 100%;
-  height: 20px;
-  margin-top:10%; 
+  height: 10px;
+  margin-top:10%;
   flex-shrink: 0;
+
 }
 
 #status-bar {
-  width: 100%;
+  width: 1%;
   height: 100%;
+  background-color: #81ead6;
 }
-
+/* 
 #status-bar[value] {
 	-webkit-appearance: none;
 	appearance: none;
@@ -34,7 +37,7 @@ header {
 
 #status-bar[value]::-webkit-progress-value {
 	background-color: #81ead6;
-}
+} */
 
 .result {
 	-webkit-tap-highlight-color: transparent; 
