--- a/survey/survey.css
+++ b/survey/survey.css
@@ -15,7 +15,7 @@ html,body {
 header {
   width: 100%;
   height: 10px;
-  margin-top:10%;
+  margin-top:3%;
   flex-shrink: 0;
 
 }
@@ -45,7 +45,7 @@ header {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 5%;
+  /* margin-top: 5%; */
   width: 90vmin;
   min-height: 500px;
   color:rgb(32, 32, 32);
