--- a/result/result.css
+++ b/result/result.css
@@ -4,7 +4,11 @@ html,
 body {
   width: auto;
   min-width: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #F5F5F7;
+  z-index: 0;
 }
 
 section:nth-child(2) {
@@ -296,4 +300,48 @@ h2 {
 
 img:last-child {
   margin-bottom: 30px;
+}
+
+.loadingBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 25vw;
+  width: 25vw;
+  border-radius: 50%;
+  border: 5px solid #81ead6;
+  /* transform: translate(-50%, -50%); */
+  /* margin-top:50%; */
+  /* left: 50%; */
+  z-index: 0;
+  /* overflow: hidden; */
+  
+  font-size: 5vw;
+  color: black;
+  /* text-align: center; */
+}
+
+.wave{
+  position: absolute;
+  z-index: -100;
+
+
+  width: 100%;
+  height: 100%;
+  
+  background: #81ead6;
+  
+  /* border-radius: 50%; */
+}
+
+@keyframes wave {
+  0% {
+    /* -webkit-transform: translateY(0); */
+            transform: translateY(0);
+  }
+  100% {
+    /* -webkit-transform: translateY(-100px); */
+            transform: translateY(-100px);
+  }
 }
