--- a/result/result.css
+++ b/result/result.css
@@ -4,11 +4,7 @@ html,
 body {
   width: auto;
   min-width: 320px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: #F5F5F7;
-  z-index: 0;
 }
 
 section:nth-child(2) {
@@ -86,13 +82,14 @@ canvas {
 .submain {  
   display: flex;
   justify-content: center;
-  font-weight: bold;
+  font-weight: lighter;
   color: black;
   background: #ffe876;
   font-size: 30px;
   line-height: 70px;
   margin-bottom: 20px;
   border-radius: 10px;
+  font-family: 'Black Han Sans', sans-serif;
 }
 
 .subsub {
@@ -310,38 +307,43 @@ img:last-child {
   height: 25vw;
   width: 25vw;
   border-radius: 50%;
-  border: 5px solid #81ead6;
-  /* transform: translate(-50%, -50%); */
-  /* margin-top:50%; */
-  /* left: 50%; */
-  z-index: 0;
-  /* overflow: hidden; */
-  
-  font-size: 5vw;
-  color: black;
-  /* text-align: center; */
+  transform: translate(-50%, -50%);
+  margin-top: 50vh;
+  top:50%;
+  left: 50%;
+  z-index: 100;
+  overflow: hidden;
+  font-family: 'Black Han Sans', sans-serif;
+  font-size: 3vw;
+  color: #F5F5F7;
 }
 
-.wave{
-  position: absolute;
+.wave {
   z-index: -100;
-
-
-  width: 100%;
-  height: 100%;
-  
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
   background: #81ead6;
-  
-  /* border-radius: 50%; */
+  width: 50vw;
+  height: 50vw;
+  margin-left: -25vw;
+  transform-origin: 50% 48%;
+  border-radius: 43%;
+  transition-duration: 0.75s;
+  transition-timing-function: ease;
+  animation: rotate 2000ms infinite linear;
 }
 
-@keyframes wave {
+@keyframes rotate {
   0% {
-    /* -webkit-transform: translateY(0); */
-            transform: translateY(0);
+    top: 100%;
+    transform: rotate(0deg);
+  }
+  60% {
+    top: 40%;
   }
   100% {
-    /* -webkit-transform: translateY(-100px); */
-            transform: translateY(-100px);
+    top: 0%;
+    transform: rotate(360deg);
   }
 }
