--- a/result/result.css
+++ b/result/result.css
@@ -304,8 +304,8 @@ img:last-child {
   justify-content: center;
   align-items: center;
   position: relative;
-  height: 25vw;
-  width: 25vw;
+  height: 50vmin;
+  width: 50vmin;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   margin-top: 50vh;
@@ -314,7 +314,7 @@ img:last-child {
   z-index: 100;
   overflow: hidden;
   font-family: 'Black Han Sans', sans-serif;
-  font-size: 3vw;
+  font-size: 5vw;
   color: #F5F5F7;
 }
 
