--- a/result/result.css
+++ b/result/result.css
@@ -7,7 +7,7 @@ body {
   background: #F5F5F7;
 }
 
-section:nth-child(2) {
+#middle {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,10 @@ section:nth-child(2) {
 }
 
 section:last-child {
+  background-color: red;
+}
+
+footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +34,7 @@ canvas {
 }
 
 .result {
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -180,6 +185,7 @@ button {
   outline: 0;
   border-radius: 8px;
   cursor: pointer;
+  /* text-align: center; */
 }
 
 i {
@@ -192,11 +198,13 @@ i {
   font-size: medium;
   font-family: 'Nanum Gothic', sans-serif;
   letter-spacing: 1.5px;
+  color: aliceblue;
 }
 
 .fas {
   color: aliceblue;
-  font-size: 23px;
+  line-height: 27px;
+  font-size: 20px;
 }
 
 .explain {
@@ -315,6 +323,8 @@ img:last-child {
   overflow: hidden;
   font-family: 'Black Han Sans', sans-serif;
   font-size: 5vw;
+  word-break: keep-all;
+  word-break: keep-all;
   word-break: keep-all;
   color: #F5F5F7;
 }
